--- a/HW4/HW4_part 2.ipynb
+++ b/HW4/HW4_part 2.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"train.csv\")\n"
+    "df=pd.read_csv(\"train.csv\")"
    ]
   },
   {
@@ -1481,11 +1481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, -1], dtype=int64)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y_train_13\n"
+    "y_train_13.unique()\n",
+    "\n"
    ]
   },
   {
